<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Calculator</string>
    <string name="debug_field">Debug</string>
    <string name="input_proffer">Input an math expression</string>
    
    <string name="btn_clear">CE</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_lb">(</string>
    <string name="btn_rb">)</string>
    <string name="btn_spot">.</string>
    <string name="btn_posit">+</string>
    <string name="btn_neg">-</string>
    <string name="btn_mul">*</string>   
    <string name="btn_div">/</string>
    <string name="btn_cos">cos</string>
    <string name="btn_sin">sin</string>
    <string name="btn_equal">=</string>
    <string name="btn_lturn">"\u2190"</string>
    
</resources>