<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left|center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/debug_field"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:gravity="center_vertical"
            android:text="@string/debug_field"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_proffer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:hint="@string/input_proffer"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:stretchMode="columnWidth"
        android:columnCount="5"
        android:numColumns="auto_fit" >

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_clear" />
        <Button
            android:id="@+id/btn_lturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_lturn" />        
        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_1" />        
        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_2" />        
        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_3" />
		<Button
            android:id="@+id/btn_posit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_posit" />		
        <Button
            android:id="@+id/btn_neg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_neg" />
		<Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_4" />		
		<Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_5" />		
        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_6" />
        <Button
            android:id="@+id/btn_lb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_lb" />        
        <Button
            android:id="@+id/btn_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_rb" />
		<Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_7" />
		<Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_8" />		
        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_9" />
		<Button
            android:id="@+id/btn_div"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_div" />
        <Button
            android:id="@+id/btn_mul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mul" />
        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_0" />
		<Button
            android:id="@+id/btn_spot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_spot" />
        <Button
            android:id="@+id/btn_equal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_equal" />

    </GridLayout>

</LinearLayout>